syntax = "proto3";

package auth;

option go_package = "github.com/DylanDunham03/LeagueGraph/auth-service/protos";

service AuthService {
  rpc GoogleSignIn(GoogleSignInRequest) returns (AuthResponse) {}
}

message GoogleSignInRequest {
  string id_token = 1;
}

message AuthResponse {
  bool success = 1;
  string user_id = 2;
  string session_token = 3;
  string error = 4;
}


// Compile Protobuf
// protoc -I=auth-service/protos \
//        --go_out=auth-service/protos --go_opt=paths=source_relative \
//        --go-grpc_out=auth-service/protos --go-grpc_opt=paths=source_relative \
//        auth-service/protos/auth.proto


// protoc -I=auth-service/protos \
//        --js_out=import_style=commonjs:frontend/src/protos \
//        --grpc-web_out=import_style=commonjs,mode=grpcwebtext:frontend/src/protos \
//        auth-service/protos/auth.proto
